Fixed Nano Image not showing up on phone

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -172,6 +172,19 @@ a:focus {
     font-size: 28 px;
   }
 }
+.download-section {
+  color: white;
+  width: 100%;
+  height: 100vh;
+  background: url(../img/nano-bg.png) no-repeat center;
+  background-repeat: no-repeat;
+  background-color: white;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  background-size: contain;
+  -o-background-size: contain;
+  overflow: hidden;
+}
 .btn-circle {
   width: 70px;
   height: 70px;
@@ -237,16 +250,7 @@ a:focus {
   }
 }
 .content-section {
-  padding-top: 100px;
-}
-.download-section {
-  color: white;
-  background: url(../img/nano-bg.png) no-repeat center center;
-  background-color: white;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+  padding-top: 50px;
 }
 .nano-img {
   max-width: 100%;
